# crank-climbing-website

./: .env.local.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  bindings.schema.json  bindings.yaml
.claude/: README.md
.claude/agents/: README.md
.claude/commands/: README.md  speckit.constitution.md  speckit.implement.md  speckit.plan.md  speckit.specify.md  speckit.tasks.md
.claude/skills/: README.md
.github/: copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: README.md
.github/workflows/: maintenance.yml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
docs/: workflow.md
docs/agents/: README.md  session-start.md  (+5 more)
infrastructure/: README.md
intent/: README.md
layers/: README.md
orchestration/: README.md  __init__.py  bindings.py  layers.py  pyproject.toml  run.py  state.py
orchestration/graphs/: __init__.py  _root.py  _subgraph_template.py  layer_00_bootstrap.py  layer_01_business_decomposition.py  layer_02_brand_kit.py  layer_03_ux.py  layer_04_scope.py  layer_05_elaboration.py  layer_06_requirements.py  layer_07_stories_tasks.py  layer_08_red_tests.py  layer_09_recursive_build.py  layer_10_local_verification.py  layer_11_pull_request.py  layer_12_dual_ac_verification.py  layer_13_review.py  layer_14_merge_deploy_observe.py  layer_M_maintenance.py
orchestration/nodes/: __init__.py  gates.py  hitl.py  invoke_skill.py  supersede.py  validate.py
scripts/: bootstrap.ps1  clone-test.ps1  generate-readme.ps1  generate-skills.ps1  generate-tech-docs.ps1
(+94 files in other folders)
